bad operand types for binary operator '>'
bad operand types for binary operator '>'